# RainRef

./: .env  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  DEPLOY.md  Makefile  README.md  SECURITY.md
api/: .dockerignore  .env  Dockerfile  alembic.ini  app.py  config.py  migrate.py  pyproject.toml  requirements.txt  seed.py
api/infra/: env.py
api/infra/versions/: 0001_init.py  0002_indexes.py  0003_users.py  0004_kb_fts.py  0005_kb_vec.py  0006_beacon_receipts.py  0007_kb_tsv_column.py
api/models/: db.py  entities.py  schemas.py
api/playbooks/: activation.yaml
api/policies/: ref.rego
api/routers/: actions.py  adapters.py  admin.py  audit.py  auth_routes.py  kb.py  metrics.py  ref_events.py  signals.py  support.py
api/services/: auth.py  beacon.py  blob.py  flow.py  graph_flow.py  grounder.py  health.py  kb_embed.py  policy.py  retriever.py  tracing.py
api/services/adapters/: __init__.py  base.py  (+3 more)
api/tests/: conftest.py  test_action_history.py  test_actions.py  test_actions_deny.py  test_admin_api_key.py  test_delete_event.py  test_e2e_auth_answer_receipt.py  test_e2e_flow.py  test_endpoints.py  test_event_stats.py  test_export_and_totals.py  test_health.py  test_health_details.py  test_kb.py  test_kb_bulk_delete.py  test_kb_copy.py  test_kb_delete_404.py  test_metrics.py  test_pagination_kb_crud.py  test_policy_and_auth.py  test_ref_filters.py  test_retrieval_citations.py  test_settings_rate_limit.py  test_signals_delete.py  test_signals_pagination.py  test_ticket_actions.py  test_ticket_update.py  test_tickets.py  test_upload_error.py
(+56 files in other folders)
